--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-The code is open source but the images are copyrighted. 
+STATUS: Working on optimising loading speeds and navagation. Working on a page for my programs. 
