--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-STATUS: Working on optimising loading speeds and navagation. Working on a page for my programs. 
+#STATUS: Working on optimising loading speeds and navagation. Working on a page for my programs. 
